feat: add admin problem api and do some refactations
